--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE <!DOCTYPE html>
-<html>
+<!-- <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible">
@@ -10,5 +10,29 @@
 </head>
 <body>
     <h1>gView</h1>
-</body>
+</body><!DOCTYPE HTML> -->
+<html lang="en">
+  
+  <head>
+    <meta charset="UTF-8">
+    <title>GitGraph.js example page</title>
+    <link rel="stylesheet" type="text/css" href="node_modules/gitgraph.js/src/gitgraph.css" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  
+  <body>
+    <canvas id="gitGraph"></canvas>
+    <div id="detail" class="gitgraph-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, ducimus, qui fuga corporis veritatis doloribus iure nulla optio dolores maiores dolorum ullam alias cum libero obcaecati cupiditate sit illo aperiam possimus voluptatum similique neque explicabo quibusdam aspernatur dolorem. Quod, corrupti magni explicabo nam sequi nesciunt accusamus aliquam dolore! Cumque, quam fugiat ab veritatis. Quia, maxime quas perferendis cupiditate explicabo at atque iusto accusamus. Nesciunt veniam quidem nemo doloribus! Dolore, cupiditate, adipisci, voluptate quam nihil ipsa placeat dolor possimus minus quas nostrum eaque in dicta autem eligendi rerum facilis nesciunt sunt doloremque suscipit enim iure vitae eius voluptates tempora tenetur hic.</div>
+    <script src="node_modules/gitgraph.js/src/gitgraph.js"></script>
+    <script src="bundle.js"></script>
+    <script src="grapher.js"></script>
+  </body>
+
+</html>
+
 </html>
